fixed styling on small screens

--- a/style.css
+++ b/style.css
@@ -21,52 +21,41 @@ h1 {
   display: inline-block;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  min-height: 60vw;
+  display: flex;
+  margin: 1rem 0;
+}
+
 section {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 0.7rem;
-  margin: 1rem 0;
+  margin: 0;
   overflow: hidden;
   position: relative;
-  height: 100%;
+  flex-grow: 1;
   border: 3px solid white;
 }
 
-
-@media only screen and (min-width: 650px) {
-  .sections {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(5, minmax(300px, 1fr));
-    column-gap: 1rem;
-    row-gap: 1rem;
-  }
-
-  section {
-    margin: 0;
-  }
-
-  .sections a {
-    height: 100%;
-  }
-}
-
 iframe {
-    width: 100%;
-    height: 100%;
-   position: absolute;
-   z-index: -1;
-   top: 0;
-   left:0;
-   opacity: 0;
-   transition: opacity 0.8s;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.8s;
 }
 
 iframe[src] {
-opacity: 1;
+  opacity: 1;
 }
 
 iframe.transparent {
-    opacity: 0;
+  opacity: 0;
 }
 
 h3 {
@@ -76,13 +65,6 @@ h3 {
 }
 section:hover h3 {
   text-decoration: underline;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-  height: 50vw;
-  display: block;
 }
 
 section p {
@@ -96,4 +78,23 @@ img {
   top: 0;
   left: 0;
   z-index: -1;
+}
+
+@media only screen and (min-width: 650px) {
+  .sections {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, minmax(300px, 1fr));
+    column-gap: calc(1rem + 1vw);
+    row-gap:  calc(1rem + 1vw);
+  }
+
+  .sections a {
+    min-height: auto;
+    margin: 0;
+  }
+
+  section {
+    margin: 0;
+  }
 }
